--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -8,10 +8,18 @@
   );
 }
 
+.mainContainer {
+  height: inherit;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 form {
   width: 90%;
   margin-inline: auto;
-  padding: 24px;
+  padding: 30px;
   border-radius: 8px;
   background: var(--gradient);
   background-size: 300%;
@@ -30,12 +38,12 @@ form {
 
 form .container {
   background-color: white;
-  padding: 30px;
+  padding: 50px 40px;
   border-radius: 6px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 5px;
+  gap: 10px;
   font-size: 1rem;
 }
 
@@ -44,7 +52,7 @@ form .container div {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
 }
 form .container div label {
   width: 15%;
