--- a/src/components/gradientContainer/gradientContainer.module.css
+++ b/src/components/gradientContainer/gradientContainer.module.css
@@ -17,6 +17,15 @@
   animation: bg-animation 10s infinite alternate;
 }
 
+@keyframes bg-animation {
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
+}
+
 .container {
   background-color: white;
   padding: 50px 40px;
