--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,26 @@ body {
   background-position: right;
 }
 
+.input {
+  width: 85%;
+  font-size: 1rem;
+  padding: 10px 6px;
+  border-radius: 6px;
+  border: 1px solid gray;
+  transition: 0.3s ease;
+}
+
+.input::placeholder {
+  color: #4e4e4e;
+  font-size: small;
+  letter-spacing: 1px;
+}
+
+.input:focus {
+  outline: none;
+  border-color: black;
+}
+
 /*  Utility Classes styles */
 .flex-center {
   display: flex;
