--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,9 @@ body {
   background-size: 300%;
   background-position: left;
   animation: bg-animation 10s infinite alternate;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @keyframes bg-animation {
@@ -81,9 +84,9 @@ body {
 }
 
 .input {
-  width: 85%;
+  width: 100%;
   font-size: 1rem;
-  padding: 10px 6px;
+  padding: 7px 6px;
   border-radius: 6px;
   border: 1px solid gray;
   transition: 0.3s ease;
@@ -112,4 +115,82 @@ body {
 }
 .w-full {
   width: 100%;
+}
+
+/* By Made styles */
+.main {
+  width: 100%;
+}
+
+.heading {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.form {
+  padding: 20px;
+}
+
+.form .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 10px;
+  font-size: 1rem;
+}
+
+.form .container div {
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+}
+.form .container div label {
+  width: 15%;
+  font-size: 1rem;
+  text-wrap: nowrap;
+}
+
+.submitBtn {
+  width: 100%;
+  padding: 15px;
+  border-radius: 6px;
+  background: linear-gradient(
+    45deg,
+    rgb(11, 32, 221),
+    rgb(192, 10, 122),
+    rgb(11, 32, 221)
+  );
+  background-size: 200%;
+  background-position: left;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-position 0.8s ease;
+}
+
+.submitBtn:hover {
+  background-position: right;
+}
+
+@media screen and (min-width: 640px) {
+  .main {
+    width: 70%;
+  }
+}
+
+@media screen and (min-width: 1028px) {
+  .main {
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main {
+    width: 50%;
+  }
 }
