--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -1,10 +1,18 @@
 .main {
-  height: 100%;
-  width: 90%;
+  width: 100%;
   margin-inline: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-block: auto;
+}
+
+.main .heading {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.form {
+  padding: 20px;
 }
 
 .form .container {
