Create student page creation completed

--- a/src/index.css
+++ b/src/index.css
@@ -147,6 +147,14 @@ body {
   font-weight: bold;
 }
 
+.container {
+  height: 100%;
+  width: 100%;
+  max-height: 720px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 /*  Utility Classes styles */
 .flex-center {
   display: flex;
